apps/plant-maintenance/plant-maintenance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-maintenance
  labels:
    app: plant-maintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plant-maintenance      
  template:
    metadata:
      labels:
        app: plant-maintenance
    spec:
      containers:
        - name: plant-maintenance
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
