apps/plant-maintenance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-maintenance
  labels:
    app: plant-maintenance
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: plant-maintenance
